--- a/_sass/components/_footer.scss
+++ b/_sass/components/_footer.scss
@@ -9,7 +9,7 @@
     color: var(--text-oncolor-primary, #fff);
     padding: var(--spacing-4xl) 0;
     margin-top: auto;
-
+    z-index: 1;
 }
 
 /* ========================================
