--- a/_sass/components/_sideMenu.scss
+++ b/_sass/components/_sideMenu.scss
@@ -19,7 +19,7 @@
     box-shadow: var(--shadow-md);
     padding: var(--spacing-md);
     min-height: fit-content;
-    z-index: 2;
+    z-index: 1;
 }
 
 .nds-content-layout.cardView .nds-sideMenu {
@@ -234,6 +234,9 @@
             #sideMenuToggle {
                 --btn-width: 100%;
                 --btn-bg: var(--background-nav);
+                --btn-bg-hover: var(--button-background-neutral-hovered);
+                --btn-bg-active: var(--button-background-neutral-pressed);
+                --btn-bg-selected: var(--button-background-neutral-selected);
                 --btn-indicator-size: 3px;
                 --btn-height: var(--_toggle-height);
                 max-width: var(--nds-content-MaxWidth, 1280px);
